Fix arrow icons for collapse items

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -26,7 +26,7 @@
     }
     .el-icon-arrow-right {
       font-family: 'soramitsu-icons' !important;
-      @extend .s-icon-chevron-top;
+      @extend .s-icon-chevron-bottom;
       font-size: 16px;
       padding: 8px;
       width: 32px;
